Fix card sizes and header icon colors on mobile

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -61,6 +61,7 @@
         align-items: center;
         i {
             font-size: 2.25rem;
+            color: $primary;
         }
     }
 
